--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -52,15 +52,15 @@
 						<div class="col-md-12 ftco-animate">
 							<div class="absolute">
 								<h4 class="number" data-number="400">0</h4>
-								<p>More than a hundred successful projects</p>
+								<p>Many successful projects</p>
 							</div>
 							<div class="text">
-								<h1 class="mb-4">We Create Modern &amp; Minimal Website</h1>
+								<h1 class="mb-4">I Create Modern &amp; Minimal Website</h1>
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Start Project</a></p>
 							</div>
 						</div>
-						<a href="https://vimeo.com/45830194" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
+						<a href="/" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
 							<span class="fa fa-play"></span>
 						</a>
 					</div>
@@ -73,16 +73,16 @@
 					<div class="row no-gutters slider-text js-fullheight align-items-center">
 						<div class="col-md-12 ftco-animate">
 							<div class="absolute">
-								<h4 class="number" data-number="21">0</h4>
+								<h4 class="number" data-number="2">0</h4>
 								<p>Years of Experienced</p>
 							</div>
 							<div class="text">
-								<h1 class="mb-4">We Create Modern &amp; Minimal Website</h1>
+								<h1 class="mb-4">I Create Modern &amp; Minimal Website</h1>
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 								<p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Explore Projects</a></p>
 							</div>
 						</div>
-						<a href="https://vimeo.com/45830194" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
+						<a href="/" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
 							<span class="fa fa-play"></span>
 						</a>
 					</div>
@@ -95,7 +95,7 @@
 		<div class="container">
 			<div class="row justify-content-center no-gutters">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-					<h2 class="mb-2">About us</h2>
+					<h2 class="mb-2">About </h2>
 				</div>
 			</div>
 			<div class="row">
