--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -148,7 +148,7 @@
 						</div>
 						<div class="col-md-6 ftco-animate">
 							<div class="text text-md-right">
-								<h3>Welcome to AVO A Personal Porfolio Web Agency</h3>
+								<h3>Welcome to Prakhar-Website A Personal Porfolio Web Agency</h3>
 								<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 							</div>
 						</div>
@@ -221,7 +221,7 @@
 												<div class="img" style="background-image: url('/static/website/images/person_1.jpg');"></div>
 												<div class="position pl-3">
 													<h4 class="mb-0">Jamie Jonson</h4>
-													<span>avo.com</span>
+													<span>Prakhar-Website</span>
 												</div>
 											</div>
 											<p><a href="#" class="custom-btn">View Portfolio</a></p>
@@ -253,7 +253,7 @@
 													<div class="img" style="background-image: url('static/images/person_2.jpg');"></div>
 													<div class="position pl-3 text-left">
 														<h4 class="mb-0">Jamie Jonson</h4>
-														<span>avo.com</span>
+														<span>Prakhar-Website</span>
 													</div>
 												</div>
 											</div>
@@ -277,7 +277,7 @@
 									<div class="desc">
 										<div class="top">
 											<span class="subheading">UI/UX Design</span>
-											<h2 class="mb-2"><a href="work.html">Avo Portfolio Agency</a></h2>
+											<h2 class="mb-2"><a href="work.html">Prakhar Portfolio Agency</a></h2>
 										</div>
 										<div class="absolute">
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -285,7 +285,7 @@
 												<div class="img" style="background-image: url('static/images/person_3.jpg');"></div>
 												<div class="position pl-3">
 													<h4 class="mb-0">Jamie Jonson</h4>
-													<span>avo.com</span>
+													<span>Prakhar-Website</span>
 												</div>
 											</div>
 											<p><a href="#" class="custom-btn">View Portfolio</a></p>
@@ -317,7 +317,7 @@
 													<div class="img" style="background-image: url('/static/website/images/person_2.jpg');"></div>
 													<div class="position pl-3 text-left">
 														<h4 class="mb-0">Jamie Jonson</h4>
-														<span>avo.com</span>
+														<span>Prakhar-Website</span>
 													</div>
 												</div>
 											</div>
@@ -349,7 +349,7 @@
 												<div class="img" style="background-image: url('/static/website/images/person_2.jpg');"></div>
 												<div class="position pl-3">
 													<h4 class="mb-0">Jamie Jonson</h4>
-													<span>avo.com</span>
+													<span>Prakhar-Website</span>
 												</div>
 											</div>
 											<p><a href="#" class="custom-btn">View Portfolio</a></p>
@@ -381,7 +381,7 @@
 													<div class="img" style="background-image: url('/static/website/images/person_2.jpg');"></div>
 													<div class="position pl-3 text-left">
 														<h4 class="mb-0">Jamie Jonson</h4>
-														<span>avo.com</span>
+														<span>Prakhar-Website</span>
 													</div>
 												</div>
 											</div>
@@ -580,7 +580,7 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">avo</h2>
+						<h2 class="ftco-heading-2">Prakhar</h2>
 						<p>Far far away, behind the word mountains, far from the countries.</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
@@ -602,10 +602,10 @@
 				</div>
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4 ml-md-4">
-						<h2 class="ftco-heading-2">About Us</h2>
+						<h2 class="ftco-heading-2">About Me</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Our Story</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Meet the team</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>My Story</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Meet my team</a></li>
 							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
 						</ul>
 					</div>
@@ -614,7 +614,7 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Company</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Me</a></li>
 							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Press</a></li>
 							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
 							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
@@ -626,9 +626,9 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
+								<li><span class="icon fa fa-map"></span><span class="text">Rajendra Prasad Hall Of Residence IIT Kharagpur West Bengal</span></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+91 7643873295</span></a></li>
+								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span class="text">rprakhar007@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
