--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -112,7 +112,7 @@
      <span class="fa fa-map-marker"></span>
    </div>
    <div class="text">
-     <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+     <p><span>Address:</span> Rajendra Prasad Hall Of Residence IIT Kharagpur West Bengal</p>
    </div>
  </div>
  <div class="dbox w-100 d-flex ftco-animate">
@@ -120,7 +120,7 @@
    <span class="fa fa-phone"></span>
  </div>
  <div class="text">
-   <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+   <p><span>Phone:</span> <a href="tel://1234567920">+91 7643873295</a></p>
  </div>
 </div>
 <div class="dbox w-100 d-flex ftco-animate">
@@ -128,7 +128,7 @@
    <span class="fa fa-paper-plane"></span>
  </div>
  <div class="text">
-   <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+   <p><span>Email:</span> <a href="mailto:info@yoursite.com">rprakhar007@gmail.com</a></p>
  </div>
 </div>
 <div class="dbox w-100 d-flex ftco-animate">
@@ -136,7 +136,7 @@
    <span class="fa fa-globe"></span>
  </div>
  <div class="text">
-   <p><span>Website</span> <a href="#">yoursite.com</a></p>
+   <p><span>LinkedIn</span> https://www.linkedin.com/in/prakharranjan2909/ <a href="#"></a></p>
  </div>
 </div>
 </div>
@@ -154,7 +154,7 @@
   <div class="row mb-5">
     <div class="col-md">
       <div class="ftco-footer-widget mb-4">
-        <h2 class="ftco-heading-2">avo</h2>
+        <h2 class="ftco-heading-2">Prakhar</h2>
         <p>Far far away, behind the word mountains, far from the countries.</p>
         <ul class="ftco-footer-social list-unstyled mt-5">
           <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
@@ -176,10 +176,10 @@
     </div>
     <div class="col-md">
       <div class="ftco-footer-widget mb-4 ml-md-4">
-        <h2 class="ftco-heading-2">About Us</h2>
+        <h2 class="ftco-heading-2">About Me</h2>
         <ul class="list-unstyled">
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Our Story</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Meet the team</a></li>
+          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>My Story</a></li>
+          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Meet my team</a></li>
           <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
         </ul>
       </div>
@@ -188,7 +188,7 @@
      <div class="ftco-footer-widget mb-4">
       <h2 class="ftco-heading-2">Company</h2>
       <ul class="list-unstyled">
-        <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+        <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Me</a></li>
         <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Press</a></li>
         <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
         <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
@@ -200,9 +200,9 @@
      <h2 class="ftco-heading-2">Have a Questions?</h2>
      <div class="block-23 mb-3">
        <ul>
-         <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-         <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-         <li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
+         <li><span class="icon fa fa-map"></span><span class="text">Rajendra prasad Hall Of residence IIT Kharagpur West Bengal</span></li>
+         <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+91 7643873295</span></a></li>
+         <li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span class="text">rprakhar007@gmail.com</span></a></li>
        </ul>
      </div>
    </div>
@@ -211,9 +211,8 @@
 <div class="row">
   <div class="col-md-12 text-center">
    
-    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+    <p>
+      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  </i> by Prakhar Ranjan</a>      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
     </div>
   </div>
 </div>
