--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -220,7 +220,7 @@
 											<div class="icon d-flex align-items-center mb-4">
 												<div class="img" style="background-image: url('/static/website/images/person_1.jpg');"></div>
 												<div class="position pl-3">
-													<h4 class="mb-0">Jamie Jonson</h4>
+													<h4 class="mb-0">Prakhar Ranjan</h4>
 													<span>Prakhar-Website</span>
 												</div>
 											</div>
@@ -252,7 +252,7 @@
 												<div class="icon d-flex align-items-center ml-md-auto mb-4">
 													<div class="img" style="background-image: url('static/images/person_2.jpg');"></div>
 													<div class="position pl-3 text-left">
-														<h4 class="mb-0">Jamie Jonson</h4>
+														<h4 class="mb-0">Prakhar Ranjan</h4>
 														<span>Prakhar-Website</span>
 													</div>
 												</div>
@@ -284,7 +284,7 @@
 											<div class="icon d-flex align-items-center mb-4">
 												<div class="img" style="background-image: url('static/images/person_3.jpg');"></div>
 												<div class="position pl-3">
-													<h4 class="mb-0">Jamie Jonson</h4>
+													<h4 class="mb-0">Prakhar Ranjan</h4>
 													<span>Prakhar-Website</span>
 												</div>
 											</div>
@@ -316,7 +316,7 @@
 												<div class="icon d-flex align-items-center ml-md-auto mb-4">
 													<div class="img" style="background-image: url('/static/website/images/person_2.jpg');"></div>
 													<div class="position pl-3 text-left">
-														<h4 class="mb-0">Jamie Jonson</h4>
+														<h4 class="mb-0">Prakhar Ranjan</h4>
 														<span>Prakhar-Website</span>
 													</div>
 												</div>
@@ -348,7 +348,7 @@
 											<div class="icon d-flex align-items-center mb-4">
 												<div class="img" style="background-image: url('/static/website/images/person_2.jpg');"></div>
 												<div class="position pl-3">
-													<h4 class="mb-0">Jamie Jonson</h4>
+													<h4 class="mb-0">Prakhar Ranjan</h4>
 													<span>Prakhar-Website</span>
 												</div>
 											</div>
@@ -380,7 +380,7 @@
 												<div class="icon d-flex align-items-center ml-md-auto mb-4">
 													<div class="img" style="background-image: url('/static/website/images/person_2.jpg');"></div>
 													<div class="position pl-3 text-left">
-														<h4 class="mb-0">Jamie Jonson</h4>
+														<h4 class="mb-0">Prakhar Ranjan</h4>
 														<span>Prakhar-Website</span>
 													</div>
 												</div>
@@ -416,7 +416,7 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url('/static/website/images/person_1.jpg')"></div>
 										<div class="pl-3">
-											<p class="name">Roger Scott</p>
+											<p class="name">Prakhar Ranjan</p>
 											<span class="position">Marketing Manager</span>
 										</div>
 									</div>
@@ -431,7 +431,7 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url('/static/website/images/person_2.jpg')"></div>
 										<div class="pl-3">
-											<p class="name">Roger Scott</p>
+											<p class="name">Prakhar Ranjan</p>
 											<span class="position">Marketing Manager</span>
 										</div>
 									</div>
@@ -446,7 +446,7 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url('/static/website/images/person_3.jpg')"></div>
 										<div class="pl-3">
-											<p class="name">Roger Scott</p>
+											<p class="name">Prakhar Ranjan</p>
 											<span class="position">Marketing Manager</span>
 										</div>
 									</div>
@@ -461,7 +461,7 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url('/static/website/images/person_1.jpg')"></div>
 										<div class="pl-3">
-											<p class="name">Roger Scott</p>
+											<p class="name">Prakhar Ranjan</p>
 											<span class="position">Marketing Manager</span>
 										</div>
 									</div>
@@ -476,7 +476,7 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url('/static/website/images/person_2.jpg')"></div>
 										<div class="pl-3">
-											<p class="name">Roger Scott</p>
+											<p class="name">Prakhar Ranjan</p>
 											<span class="position">Marketing Manager</span>
 										</div>
 									</div>
